@@ -11,6 +11,7 @@ Wed, 12 Jan 2005 22:56:40 +0000
     Kevin Berry, Karl Chen).
   * runsv.c: typos; bugfix: run optional control/x when receiving SIGTERM
     (thx Vladimir Smelhaus); minor.
+  * man/runsvctrl.8: minor.
 
 runit 1.2.0
 Fri, 17 Dec 2004 21:08:50 +0000
